# bsc_trushnikov

./: README.md
Example/: cloud_viewer.cpp
прототип/CI/: main.py
прототип/CI/backend/: first.py  second.py
прототип/GUI/: CMakeLists.txt  densityform.cpp  densityform.h  densityform.ui  helpfunctions.cpp  helpfunctions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  percentform.cpp  percentform.h  percentform.ui  rmse.cpp  rmse.h  rmse.ui  treeitem.cpp  treeitem.h  worker.cpp  worker.h
прототип/GUI/python/: first_method.py  second_method.py
